# player_proto

./: CMakeLists.txt  lv_conf.h  main.cpp
FatFS/: ff.c  ffconf.h  sdmm.cpp  spi_driver.h
FreeRTOS/: FreeRTOSConfig.h
FreeRTOS/portable/GCC/ARM_CM0/: port.c
TFTLIB_8BIT/: CMakeLists.txt  TFTLIB_8BIT.cpp  TFTLIB_8BIT.h
TFTLIB_8BIT/lcd_drivers/: ili9327_drv.h  ili9341_parallel_drv.h  nt35510_parallel_drv.h
XPT2046/: XPT2046.cpp  XPT2046.h
lvgl/: CMakeLists.txt
lvgl/src/core/: lv_refr.c
lvgl/src/hal/: lv_hal_disp.h
pio_spi/: pio_spi.c  pio_spi.h  spi.pio
simple_ui/: ui.c  ui.h  ui_helpers.c  ui_helpers.h  ui_img_audi3_png.c  ui_img_audi4_png.c
